--- a/case_study_02.ipynb
+++ b/case_study_02.ipynb
@@ -6,7 +6,7 @@
       "name": "case_study_02.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN6BPJPwu4zoEkI2XMIu8Aj",
+      "authorship_tag": "ABX9TyMSI0JfepXVDfoxSjvdmAzF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
           "height": 92
         },
         "id": "mmgWOFL14KGx",
-        "outputId": "9458d2e9-9adf-44b5-868e-44c4ec2d391b"
+        "outputId": "101f89f5-05d0-40b0-85bc-500ffb14789f"
       },
       "execution_count": 3,
       "outputs": [
@@ -152,7 +152,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p7KNNJC64Rlr",
-        "outputId": "90da997b-7cfb-4517-8873-0f44130201e6"
+        "outputId": "de6b7256-0bd9-401d-c017-f3199e007d8a"
       },
       "execution_count": 4,
       "outputs": [
@@ -265,7 +265,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OhcCzKWX5Q_h",
-        "outputId": "f99d8232-03b8-4647-c259-0b846245b00c"
+        "outputId": "a8f0a21f-bac3-4aff-dc46-a8feb2538ccc"
       },
       "execution_count": 5,
       "outputs": [
@@ -323,7 +323,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 98
         },
-        "outputId": "f75593ab-9e05-4efa-a097-2d27657b2a6a"
+        "outputId": "0093b142-00be-4752-be94-cb586c96ff13"
       },
       "execution_count": 6,
       "outputs": [
@@ -381,7 +381,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 98
         },
-        "outputId": "fbe99c93-2894-43ac-efca-8b49c2379b7d"
+        "outputId": "535e01a6-e355-48b5-cd42-e384aeb1d490"
       },
       "execution_count": 7,
       "outputs": [
@@ -451,7 +451,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 140
         },
-        "outputId": "c8991abd-767e-48dd-b2e2-c8c0f8815df2"
+        "outputId": "ad2e1c53-0673-4a9b-ce4e-51275d476975"
       },
       "execution_count": 8,
       "outputs": [
@@ -535,7 +535,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "3225d8a5-8520-465a-8976-b565979e5759"
+        "outputId": "27e60ff8-b9b8-4f59-a3a8-b90961c66fa4"
       },
       "execution_count": 9,
       "outputs": [
@@ -619,7 +619,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 182
         },
-        "outputId": "4991824b-9cb8-4496-9f5a-eecf1b01cfe5"
+        "outputId": "12c60fa3-0011-461a-905a-3beaa4dcb305"
       },
       "execution_count": 10,
       "outputs": [
@@ -719,7 +719,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 98
         },
-        "outputId": "472aa9fe-0de7-482c-ca68-5b9a0e142912"
+        "outputId": "cccfce91-2e6f-4630-da43-164707be75c7"
       },
       "execution_count": 11,
       "outputs": [
@@ -788,7 +788,7 @@
           "height": 182
         },
         "id": "jRtblrwilxfe",
-        "outputId": "9d77d936-c680-4801-c261-7613b4afe688"
+        "outputId": "e4b90784-193c-427d-e071-22f66fa1fdb0"
       },
       "execution_count": 12,
       "outputs": [
@@ -885,7 +885,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 98
         },
-        "outputId": "623713c4-7f71-443a-dd86-905dab730f62"
+        "outputId": "501abc2e-fa1b-4a5c-d1d3-2b184a581506"
       },
       "execution_count": 13,
       "outputs": [
@@ -964,7 +964,7 @@
           "height": 584
         },
         "id": "DSyAuEJXXEpz",
-        "outputId": "39f224c0-f709-4b8c-f4a9-87c556d1ef5c"
+        "outputId": "45efe095-d50e-4d98-cfb3-718dbe9ae694"
       },
       "execution_count": 14,
       "outputs": [
@@ -1145,7 +1145,7 @@
           "height": 161
         },
         "id": "G_uvgKaLhsET",
-        "outputId": "c5b6ccb8-4f01-4150-be9d-0a8463790b34"
+        "outputId": "9b6d9e49-4b94-4253-c9b6-1f31137b2203"
       },
       "execution_count": 15,
       "outputs": [
@@ -1254,9 +1254,9 @@
           "height": 140
         },
         "id": "qZGFFDRGDfyB",
-        "outputId": "53177ff8-7712-481c-9b0a-7c016e06a312"
+        "outputId": "d607930d-ca79-4ed1-ba6a-ade4318b239a"
       },
-      "execution_count": 24,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1298,7 +1298,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 16
         }
       ]
     },
@@ -1319,7 +1319,7 @@
       "metadata": {
         "id": "sLu2CsfADjCo"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1360,9 +1360,9 @@
           "height": 161
         },
         "id": "X3SUDQYPDmaR",
-        "outputId": "dbcb07b6-527c-464f-cba3-1c384a25b748"
+        "outputId": "56c2b940-f553-4ff3-d6e1-c99f8f18089d"
       },
-      "execution_count": 54,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1411,7 +1411,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 17
         }
       ]
     },
@@ -1443,9 +1443,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 98
         },
-        "outputId": "f939b8eb-8bd6-4bc2-ef7b-7cef6a9eff2a"
+        "outputId": "81cf8cf3-311d-4346-b803-1d3ada17df40"
       },
-      "execution_count": 64,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -1477,7 +1477,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 64
+          "execution_count": 18
         }
       ]
     },
@@ -1508,9 +1508,9 @@
           "height": 182
         },
         "id": "OPLjOHc2DxJO",
-        "outputId": "30bef3fe-dcaa-42b6-dd11-ec7f8e626387"
+        "outputId": "0c9891ad-41eb-4c42-a2bd-b0000dabf1b3"
       },
-      "execution_count": 73,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1570,7 +1570,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 73
+          "execution_count": 19
         }
       ]
     },
@@ -1591,7 +1591,359 @@
       "metadata": {
         "id": "T5kajl33D4Y-"
       },
-      "execution_count": 15,
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**C. Ingredient Optimisation**"
+      ],
+      "metadata": {
+        "id": "MNWCyJrJrd2n"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What are the standard ingredients for each pizza?"
+      ],
+      "metadata": {
+        "id": "18d-G0mGrj3F"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%sql\n",
+        "--select * from pizza_toppings \n",
+        "--select * from pizza_recipes\n",
+        "with pizza_recipe_topping as (\n",
+        "select pizza_id,\n",
+        "       unnest(string_to_array(toppings,','::text)) topping_id \n",
+        "from pizza_recipes\n",
+        ")\n",
+        "select \n",
+        "   pizza_name,\n",
+        "   topping_name\n",
+        "from pizza_recipe_topping prt inner join pizza_names pn \n",
+        "    on pn.pizza_id = prt.pizza_id  \n",
+        "    inner join pizza_toppings pt \n",
+        "    on prt.topping_id::integer = pt.topping_id\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 373
+        },
+        "id": "I25eYau0t5xs",
+        "outputId": "29027ee8-6903-4c98-fcb1-9f75790dff87"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "14 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Meatlovers', 'BBQ Sauce'),\n",
+              " ('Meatlovers', 'Pepperoni'),\n",
+              " ('Meatlovers', 'Cheese'),\n",
+              " ('Meatlovers', 'Salami'),\n",
+              " ('Meatlovers', 'Chicken'),\n",
+              " ('Meatlovers', 'Bacon'),\n",
+              " ('Meatlovers', 'Mushrooms'),\n",
+              " ('Meatlovers', 'Beef'),\n",
+              " ('Vegetarian', 'Tomato Sauce'),\n",
+              " ('Vegetarian', 'Cheese'),\n",
+              " ('Vegetarian', 'Mushrooms'),\n",
+              " ('Vegetarian', 'Onions'),\n",
+              " ('Vegetarian', 'Peppers'),\n",
+              " ('Vegetarian', 'Tomatoes')]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>pizza_name</th>\n",
+              "            <th>topping_name</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>Meatlovers</td>\n",
+              "            <td>BBQ Sauce</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>Meatlovers</td>\n",
+              "            <td>Pepperoni</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>Meatlovers</td>\n",
+              "            <td>Cheese</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>Meatlovers</td>\n",
+              "            <td>Salami</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>Meatlovers</td>\n",
+              "            <td>Chicken</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>Meatlovers</td>\n",
+              "            <td>Bacon</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>Meatlovers</td>\n",
+              "            <td>Mushrooms</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>Meatlovers</td>\n",
+              "            <td>Beef</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>Vegetarian</td>\n",
+              "            <td>Tomato Sauce</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>Vegetarian</td>\n",
+              "            <td>Cheese</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>Vegetarian</td>\n",
+              "            <td>Mushrooms</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>Vegetarian</td>\n",
+              "            <td>Onions</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>Vegetarian</td>\n",
+              "            <td>Peppers</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>Vegetarian</td>\n",
+              "            <td>Tomatoes</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What was the most commonly added extra?"
+      ],
+      "metadata": {
+        "id": "avFXIRMRrqQz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%sql\n",
+        "with customer_order_extras as (\n",
+        "select pizza_id,unnest(string_to_array(extras,',')) extra \n",
+        "from customer_orders \n",
+        "where not (extras = '' \n",
+        "           or extras = 'null' \n",
+        "           or extras is null)\n",
+        ")\n",
+        "select topping_name,\n",
+        "       count(1) cnt\n",
+        "from customer_order_extras coe inner join pizza_toppings t on \n",
+        " coe.extra::integer = t.topping_id\n",
+        "group by 1\n",
+        "order by cnt desc"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 140
+        },
+        "id": "XKnP5a_KFR9E",
+        "outputId": "7962b56a-4f01-410c-e475-2eefca271b80"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "3 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Bacon', 4), ('Chicken', 1), ('Cheese', 1)]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>topping_name</th>\n",
+              "            <th>cnt</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>Bacon</td>\n",
+              "            <td>4</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>Chicken</td>\n",
+              "            <td>1</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>Cheese</td>\n",
+              "            <td>1</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What was the most common exclusion?"
+      ],
+      "metadata": {
+        "id": "sD4JqmQhrv-4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%sql \n",
+        "with exclusions as (\n",
+        "select unnest(string_to_array(exclusions,',')) exclusion \n",
+        "from customer_orders\n",
+        "where not (exclusions is null or exclusions ='' or exclusions ='null')\n",
+        ") \n",
+        "select topping_name,\n",
+        "      count(1) as cnt\n",
+        "from exclusions e inner join\n",
+        "   pizza_toppings pt on e.exclusion::integer = pt.topping_id\n",
+        "group by 1 \n",
+        "order by 2 desc"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 140
+        },
+        "id": "AoD3UjJ8KVCh",
+        "outputId": "2cca397a-ce57-475d-a62f-9809676a820a"
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "3 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Cheese', 4), ('Mushrooms', 1), ('BBQ Sauce', 1)]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>topping_name</th>\n",
+              "            <th>cnt</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>Cheese</td>\n",
+              "            <td>4</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>Mushrooms</td>\n",
+              "            <td>1</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>BBQ Sauce</td>\n",
+              "            <td>1</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Generate an order item for each record in the customers_orders table in the format of one of the following:\n",
+        "\n",
+        "*   Meat Lovers\n",
+        "*   Meat Lovers - Exclude Beef\n",
+        "*   Meat Lovers - Extra Bacon\n",
+        "*   Meat Lovers - Exclude Cheese, Bacon - Extra Mushroom, Peppers"
+      ],
+      "metadata": {
+        "id": "lGzNA3_qrzhz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Generate an alphabetically ordered comma separated ingredient list for each pizza order from the customer_orders table and add a 2x in front of any relevant ingredients\n",
+        "*   For example: \"Meat Lovers: 2xBacon, Beef, ... , Salami\""
+      ],
+      "metadata": {
+        "id": "MpWJ_CUgsNri"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What is the total quantity of each ingredient used in all delivered pizzas sorted by most frequent first?"
+      ],
+      "metadata": {
+        "id": "r8rDYQYosouH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "fwTSoXNqsvUS"
+      },
+      "execution_count": 19,
       "outputs": []
     }
   ]
