--- a/case_study_04.ipynb
+++ b/case_study_04.ipynb
@@ -6,7 +6,7 @@
       "name": "case_study_04.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP1/XFeaC4UOt/Bx5rgJkHD",
+      "authorship_tag": "ABX9TyPvjL8aJR7gEhKad5RrPsT/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7213,13 +7213,105 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "%%sql\n",
+        "with customer_txns_cnt_per_month\n",
+        "as (\n",
+        "select customer_id\n",
+        "       ,DATE_TRUNC('MONTH',txn_date)::date txn_month_start\n",
+        "       ,txn_type\n",
+        "       ,count(1) txn_cnt\n",
+        "from customer_transactions\n",
+        "where txn_type= 'deposit'\n",
+        "group by \n",
+        "DATE_TRUNC('MONTH',txn_date),\n",
+        "customer_id,\n",
+        "txn_type\n",
+        "),\n",
+        "deposit_txns as \n",
+        "(\n",
+        "select \n",
+        "   distinct customer_id,txn_month_start from \n",
+        "customer_txns_cnt_per_month\n",
+        "where txn_type = 'deposit' and txn_cnt > 1\n",
+        "),\n",
+        "purchase_withdrawals_txns as \n",
+        "(\n",
+        "select \n",
+        "   distinct customer_id,txn_month_start \n",
+        "   from \n",
+        "customer_txns_cnt_per_month\n",
+        "where txn_type in ('purchase','withdrawal') and txn_cnt = 1\n",
+        ")\n",
+        "select \n",
+        "       d.txn_month_start\n",
+        "       ,count(1) cnt\n",
+        "from deposit_txns d \n",
+        "inner join customer_txns_cnt_per_month t \n",
+        "on d.txn_month_start = t.txn_month_start\n",
+        "and d.customer_id = t.customer_id\n",
+        "group by d.txn_month_start\n",
+        "order by txn_month_start"
       ],
       "metadata": {
-        "id": "W72kxzbey6Mn"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 161
+        },
+        "id": "W72kxzbey6Mn",
+        "outputId": "336f36a2-03ba-4cf0-9515-672e0d1cb053"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "4 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(datetime.date(2020, 1, 1), 226),\n",
+              " (datetime.date(2020, 2, 1), 200),\n",
+              " (datetime.date(2020, 3, 1), 208),\n",
+              " (datetime.date(2020, 4, 1), 84)]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>txn_month_start</th>\n",
+              "            <th>cnt</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>2020-01-01</td>\n",
+              "            <td>226</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>2020-02-01</td>\n",
+              "            <td>200</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>2020-03-01</td>\n",
+              "            <td>208</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>2020-04-01</td>\n",
+              "            <td>84</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
     },
     {
       "cell_type": "markdown",
